missing api-ms-win-crt-runtime-l1-1-0-dll make sure your machine
has the latest Windows patches and/or download this:

https://www.microsoft.com/en-us/download/details.aspx?id=48145

This might also help with other hard crashes.

If this does not help, or if you see a black screen, try starting Mnemosyne
with the --qt-opengl=desktop command line argument.)

- Allow users to add webm images (patch by gojun077).
- Added a config.py option to put an upper limit to the scheduled interval.
  Dangerous, use this with caution.
- Improve Python 3.10 compatibility (bug report by Martin Brodbeck).  
  

Mnemosyne 2.8 : 2021-06-28

- Added an option to stop showing cards as soon as they reach a certain
  number of successful retention reps. This makes sure that your review load
  does not keep increasing over the years.
- The card browser now also shows the number of learning and review reps
  since the last lapse.
- Making storing of client sync password optional. Warn that the client stores
  the password in plain text. The server now stores a password hash (patch
  by J5lx).
- Make sure that Mnemosyne is associated with its icon under Wayland (patch
  by J5lx).
- Fix error when using the sync server and the web server at the same time
  (patch by Grégoire Jadi).
- Improve Python 3.9 compatibility (patch by Julien Puydt).


Mnemosyne 2.7.3 : 2020-11-23

- Make tag completion case insensitive (requested by Daniel Schmidt).
- Add keyboard shortcuts for Google translate and text-to-speech.
- Don't forget to update whether or not a card is active when bulk adding/
  removing tags in the card browser.
- Make Anki import more robust (bug reported by Максим).
- Don't crash when saving text-to-speech containing linebreaks.
- Fix corner cases of scheduled counter not updating when learning ahead of
  schedule and switching between saved sets (bug reported by girlsim).
- Updated translations.
- More robust importing under Linux.
- Upgraded to gTTS 2.2.1 and googletrans 3.0.0.