@@ -9,10 +9,14 @@ This might also help with other hard crashes.
 If this does not help, or if you see a black screen, try starting Mnemosyne
 with the --qt-opengl=desktop command line argument.)
 
+- Try harder to reach the maximum number of cards the user wants to memorise
+  at once.
 - Allow users to add webm images (patch by gojun077).
 - Added a config.py option to put an upper limit to the scheduled interval.
   Dangerous, use this with caution.
 - Improve Python 3.10 compatibility (bug report by Martin Brodbeck).  
+- Avoid infinite error loop when converting a card to cloze type 
+  (patch by Oisín).
   
 
 Mnemosyne 2.8 : 2021-06-28
